src/test/resources/error/NoError.mch
MACHINE NoError
VARIABLES x
INVARIANT x : 1..3
INITIALISATION x := 1
OPERATIONS
foo = PRE 1 = 1 THEN x:= 2 END 
END